--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,6 @@ body {
   height: 10vw;
   width: 20vw;
   font-size: x-large;
-
 }
 .button-pages {
   background-color: white;
@@ -19,12 +18,10 @@ body {
   height: 3vw;
   width: 8vw;
   font-size: medium;
-
 }
 .button-pages:hover {
   box-shadow: 5px 5px 5px rgb(197, 114, 155);
   cursor: pointer;
-
 }
 .button-welcome:hover {
   box-shadow: 5px 5px 5px rgb(197, 114, 155);
@@ -47,19 +44,15 @@ body {
   justify-content: center;
   padding: 1vw;
   background-color: white;
- 
 }
 
 a {
   color: black;
   font-size: x-large;
-
 }
 a:hover {
-  color: rgb(237, 13, 140)
+  color: rgb(237, 13, 140);
 }
-
-
 
 .font {
   font-style: normal;
